--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
+        "json-server": "^0.16.1",
         "node-sass": "^4.12.0",
         "primeflex": "1.0.0-rc.1",
-        "primeicons": "1.0.0",
-        "primereact": "3.1.7",
+        "primeicons": "^1.0.0",
+        "primereact": "^3.4.0",
         "quill": "1.3.3",
         "react": "^16.8.6",
         "react-app-polyfill": "^1.0.1",
         "react-dom": "^16.8.6",
         "react-router-dom": "^4.3.1",
         "react-scripts": "3.0.1",
+        "react-toastify": "^6.0.8",
         "react-transition-group": "^2.5.1"
     },
     "scripts": {
