--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
         "react": "^16.8.6",
         "react-app-polyfill": "^1.0.1",
         "react-dom": "^16.8.6",
+        "react-redux": "^7.2.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "3.0.1",
         "react-toastify": "^6.0.8",
-        "react-transition-group": "^2.5.1"
+        "react-transition-group": "^2.9.0",
+        "toast": "^0.2.10"
     },
     "scripts": {
         "start": "react-scripts start",
