--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "^16.8.6",
         "react-app-polyfill": "^1.0.1",
         "react-dom": "^16.8.6",
+        "react-images-upload": "^1.2.8",
         "react-redux": "^7.2.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "3.0.1",
