--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "@fullcalendar/daygrid": "4.0.1",
         "@fullcalendar/interaction": "4.0.2",
         "@fullcalendar/timegrid": "4.0.1",
+        "antd": "^4.9.2",
+        "antd-img-crop": "^3.13.2",
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
+        "jquery": "^3.5.1",
         "json-server": "^0.16.1",
         "node-sass": "^4.12.0",
         "primeflex": "1.0.0-rc.1",
@@ -29,10 +32,12 @@
         "react-redux": "^7.2.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "3.0.1",
+        "react-slick": "^0.27.13",
         "react-toastify": "^6.0.8",
         "react-transition-group": "^2.9.0",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
+        "slick-carousel": "^1.8.1",
         "toast": "^0.2.10"
     },
     "scripts": {
