--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
+        "html2canvas": "^1.0.0-rc.7",
         "jquery": "^3.5.1",
         "json-server": "^0.16.1",
+        "jspdf": "^2.2.0",
+        "jspdf-autotable": "^3.5.13",
         "node-sass": "^4.12.0",
         "primeflex": "1.0.0-rc.1",
         "primeicons": "^1.0.0",
@@ -33,6 +36,7 @@
         "react-router-dom": "^4.3.1",
         "react-scripts": "3.0.1",
         "react-slick": "^0.27.13",
+        "react-to-print": "^2.12.2",
         "react-toastify": "^6.0.8",
         "react-transition-group": "^2.9.0",
         "redux": "^4.0.5",
