--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "json-server": "^0.16.1",
         "jspdf": "^2.2.0",
         "jspdf-autotable": "^3.5.13",
+        "moment": "^2.29.1",
         "node-sass": "^4.12.0",
         "primeflex": "1.0.0-rc.1",
         "primeicons": "^1.0.0",
