--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "homepage": "/sigma-react",
     "private": false,
     "repository": {
-        "type": "git",
-        "url": "https://github.com/primefaces/sigma.git"
+        "type": "git"
     },
     "license": "MIT",
     "dependencies": {
